<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context="com.uxdesign.ccp_frontend.DetalleProductoActivity">

    <ImageView
        android:id="@+id/imageLogoPeque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo_peque_o"
        android:src="@drawable/logoccppeque"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/productoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:background="@color/grey"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/imageLogoPeque"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageProducto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logoccppeque"
            android:paddingRight="15dp"
            android:contentDescription="Imagen del producto"
            android:layout_marginEnd="0dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/textNombreProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre del Producto"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Stock"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textPrecioProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$999.99"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray"
                android:layout_marginTop="2dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/descripcionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/grey"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/productoContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/etiquetaDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Descripción"
            android:paddingBottom="7dp"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textDescripcionProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Descripción del producto aquí."
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cantidadContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/cuadrado_borde"
        android:layout_marginTop="16dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/descripcionContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tituloCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="16dp"
            android:text="Cantidad"
            android:textColor="@color/orange"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="20dp"
            android:background="@drawable/spinner_borde"
            android:hint="0"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tituloValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:text="Valor Total"
            android:textColor="@color/orange"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="20dp"
            android:background="@drawable/spinner_borde"
            android:hint="0"
            android:focusable="false"
            android:minHeight="48dp" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:width="200dp"
        android:background="@android:color/black"
        android:text="Agregar"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageOjoN"
        android:contentDescription="Cambiar color"
        android:layout_width="63dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/pinkeye"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="355dp"
        tools:layout_editor_absoluteY="16dp"
        tools:srcCompat="@drawable/pinkeye" />

</androidx.constraintlayout.widget.ConstraintLayout>
