<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.uxdesign.ccp_frontend.MainActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Logo de CCP"
        android:src="@drawable/logoccp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/cuadroMain"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/cuadrado_borde_login"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintTop_toBottomOf="@id/imageLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tituloUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="6dp"
            android:text="USUARIO"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="4dp"
            android:paddingLeft="20dp"
            android:background="@drawable/spinner_borde"
            android:hint="Ingresa tu correo registrado"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tituloClave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="6dp"
            android:text="PASSWORD  "
            android:textColor="@color/orange"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="4dp"
            android:paddingLeft="20dp"
            android:inputType="textPassword"
            android:background="@drawable/spinner_borde"
            android:hint="Ingresa tu contraseña registrada"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textoRegistrarme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:text="REGISTRARME!"
            android:textColor="@color/greytext"
            android:textStyle="bold"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="60dp"
        android:width="200dp"
        android:background="@android:color/black"
        android:text="@string/iniciar"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/cuadroMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Versión"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>